<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="38dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/registration_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_decoration"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:maxLength="40"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:paddingEnd="0dp"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:inputType="text"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtHeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_decoration"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center_vertical"
                android:hint="@string/user_height"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center_vertical"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:text="@string/sm"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtWeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_decoration"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center_vertical"
                android:hint="@string/user_height"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center_vertical"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:text="@string/kg"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/mealTime"
            android:textColor="@color/black"
            android:textSize="15sp" />

            <!-- RelativeLayout, который будет расширяться при появлении RecyclerView -->
            <RelativeLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_decoration">

                <TextView
                    android:id="@+id/TVMealTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="0dp"/>

                <ImageView
                    android:id="@+id/IvDownArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/down_arrow" />

                <ImageView
                    android:id="@+id/IvUpArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/up_arrow"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMealTime"
                    android:layout_marginTop="50dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            </RelativeLayout>

        <TextView
            android:id="@+id/ButtonRegistration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/item_decoration"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/button_continue"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>